tests/codegen/fail/001-or-not.hyg
assert(not (false or not false))